Fixes scrollbars appearing when not needed

--- a/taiga-inps-theme/custom.scss
+++ b/taiga-inps-theme/custom.scss
@@ -465,7 +465,7 @@ a.secondary:hover {
 
 .main {
     @media (max-width: $xl) {
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
